# watchible

./: README.md
hardware/BOM/: BOM_PDWD-MINI R2_2022-02-19.csv  BOM_PDWD-MINI R2_2022-02-19.xlsx
hardware/PCB/: PickAndPlace_PDWD-MINI-PCB-R2_2022-02-19.csv
hardware/Schematics/: SCH_PDWD-MINI R2_2022-02-19.json
software/: README.md  main.py  omain.py  original_main.py  watchible.py
software/c/: CMakeLists.txt  cert.h  hello.c  hello.h  queue.c  queue.h
software/python/: aws_main.py  config.py  first_main.py  main_mosquitto.py  mosquitto_bc660K_main.py  two_processors.py
software/python/async/: bc66.py  config.py  main_asyn.py
